# hide_console_ng

./: Cargo.toml  LICENSE  README.md
examples/: example_app.rs
gen-windows-bindings/: Cargo.toml
gen-windows-bindings/src/: main.rs
src/: lib.rs  proc_snapshot.rs  show_window.rs  windows_bindings.rs
