[package]
name = "hide_console_ng"
version = "0.1.0"
edition = "2021"
authors = ["Skrity <skrityx@gmail.com>"]
license = "MIT"
description = "Hide console on windows for runtime multi-subsystem applications"
repository = "https://github.com/Skrity/hide_console_ng"
keywords = ["windows", "console", "gui", "subsystem", "windows_subsystem"]
categories = ["api-bindings", "os::windows-apis"]
readme = "README.md"
rust-version = "1.65"

[dependencies]

[package.metadata.docs.rs]
default-target = "x86_64-pc-windows-gnu"
targets = []
